--- a/farmersMarket/src/main/resources/application.properties
+++ b/farmersMarket/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=farmersMarket 
 spring.datasource.url=jdbc:sqlite:src/main/farmersMarket.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=update
