--- a/farmersMarket/src/main/resources/application.properties
+++ b/farmersMarket/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:sqlite:src/main/farmersMarket.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
