--- a/farmersMarket/src/main/resources/application.properties
+++ b/farmersMarket/src/main/resources/application.properties
@@ -2,5 +2,8 @@ spring.application.name=farmersMarket
 spring.datasource.url=jdbc:sqlite:src/main/farmersMarket.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
+spring.security.user.name=user
+spring.security.user.password=password
